tests/ui/cilk/cilk_for_return.stderr
error: cannot use `return` within cilk_for
  --> $DIR/cilk_for_return.rs:13:13
   |
LL |             return;
   |             ^^^^^^

error: aborting due to 1 previous error

